# ComputerGrafics

./: CMakeLists.txt  main.cpp
lab_1/: Color.cpp  Point.cpp  Point.h  PrimitivesWM.cpp  PrimitivesWM.h  PrimitivesWMHolder.cpp  PrimitivesWMHolder.h  TriangleStrip.cpp  TriangleStrip.h  TriangleStripManager.cpp  TriangleStripManager.h
lab_2/: Polygon.cpp  Polygon.h  PolygonManager.cpp  PolygonManager.h  PrimitivesRasteringWM.cpp  PrimitivesRasteringWM.h  PrimitivesRasteringWMHolder.cpp  PrimitivesRasteringWMHolder.h
util/: VerticesDelimiter.h  WMHolder.cpp  WindowManager.h  utils.cpp  utils.h
utils/: Color.h  Point.cpp  Point.h  WMHolder.h  utils.cpp  utils.h
